--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="styles/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
@@ -12,9 +12,9 @@
 <body>
     <header class="header">
         <nav class="nav__header">
-            <a href="./index.html" class="nav__header--element js__link selected">Home</a>
-            <a href="./projects.html" class="nav__header--element js__link">Projects</a>
-            <a href="./about.html" class="nav__header--element js__link">About</a>
+            <a href="index.html" class="nav__header--element js__link selected">Home</a>
+            <a href="partials/projects.html" class="nav__header--element js__link">Projects</a>
+            <a href="partials/about.html" class="nav__header--element js__link">About</a>
         </nav>
     </header>
     <main class="main">
