Change png extension

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section class="highlights">
             <a href="https://www.elconfidencial.com/economia/2024-01-11/mapa-eficiencia-energetica-calefaccion-edificio-rehabilitacion_3796426/" class="highlights__item--link">
                 <div class="highlights__item">
-                    <img src="../imgs/preview/preview_demanda_calefaccion.png" alt="" class="highlights__item--img">
+                    <img src="../imgs/preview/preview_demanda_calefaccion.PNG" alt="" class="highlights__item--img">
                     <p class="highlights__item--title">The map of heat expenditure, building by building: do you pay more that your neighbours?</p>
                     <p class="highlights__item--description">The Ministry of Housing, in collaboration with a consulting firm, released a tool showing the heating demand for every building in Spain. We used this data to create our own map, incorporating the cost of renovations that would improve energy efficiency in older buildings. The article emphasized that Spain's housing stock is outdated, making it expensive to retrofit for better energy efficiency. The report called attention to the need for government support and awareness to tackle these challenges, especially as energy costs rise. It also discussed the environmental and economic benefits of upgrading Spain’s aging buildings to meet modern energy standards.</p>
                 </div>
